[gd_scene load_steps=2 format=2]

[ext_resource path="res://accesorios/scenes/main_menu/main_menu.gd" type="Script" id=1]

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="button_start" type="Button" parent="."]
margin_left = 401.0
margin_top = 215.0
margin_right = 636.0
margin_bottom = 266.0
text = "START"

[node name="button_quit" type="Button" parent="."]
margin_left = 401.0
margin_top = 311.0
margin_right = 636.0
margin_bottom = 362.0
text = "QUIT"

[connection signal="pressed" from="button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="button_quit" to="." method="_on_button_quit_pressed"]
